--- a/main.css
+++ b/main.css
@@ -208,9 +208,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 2rem;
     width: 100%;
-    padding: 2rem 1rem;
+    padding: 2rem;
 }
 
 .footer__icons > .icons > a{
@@ -244,8 +243,9 @@
     padding: 0rem 1rem;
 }
 
-.foot__info > ul >li {
+.foot__info > ul {
     list-style: none;
+    padding: 0rem 1rem;
 }
 
 .footer{
@@ -258,7 +258,7 @@
 .copyright{
     display: flex;
     flex-direction: column;
-    padding: 1rem 1rem;
+    padding: 1rem 2rem;
 }
 
 .copyright > p > a{
@@ -360,7 +360,6 @@
         width: 40%;
     }
 
-
     /* Membership section */
 
     .card{
@@ -386,13 +385,22 @@
 
     /* Footer css */
 
+    .footer{
+        display: flex;
+        /* flex-direction: row; */
+        align-items: center;
+        justify-content: flex-start;
+        /* flex-wrap: wrap; */
+    }
+
     .footer__icons{
         flex-direction: column;
         align-items: flex-start;
+        padding: 1rem;
     }
 
     .footer__icons > .logo{
-        padding: 0rem 1rem;
+        padding: 0rem 1rem 2rem 1rem;
     }
 
     .copyright{
@@ -400,10 +408,10 @@
     }
 
     .copyright > p {
-        padding: 0rem 1rem;
+        padding: 0rem 1rem 0 0;
     }
 
     .foot__info{
-        width: 30%;
+        width: 25%;
     }
 }
